2001-03-30  Alasdair Allan <aa@astro.ex.ac.uk>

        * Packaged for CPAN distribution, included README and GPL files
	
2001-03-29  Alasdair Allan <aa@astro.ex.ac.uk>

        * CFITSIO/CFITSIO.pm: Implemented writehdr
	
	* t/cfitsio.t: Added test harness for new class

2001-03-28  Alasdair Allan <aa@astro.ex.ac.uk>

        * CFITSIO/CFITSIO.pm: Implemented configure
	
2001-03-27  Alasdair Allan <aa@astro.ex.ac.uk>

        * Header.pm: Added tied hash to header class
	
	* t/tied.t: Added test harness for new tied interface

2001-03-24  Alasdair Allan <aa@astro.ex.ac.uk>

        * CFITSIO/CFITSIO.pm: Skeleton structre for CFITSIO module added
 	
        * t/parse.t: Rewrote test harness for Header
	
	* Header.pm: Fixed bugs in array maps being returned by some functions
	
	* t/ndf.t: Rewote test harness using some harder tests
	    	
2001-03-17  Tim Jenness  <timj@jach.hawaii.edu>

	* Header.pm: configure Now uses map and _rebuild_lookup

2001-03-16  Tim Jenness  <timj@jach.hawaii.edu>

        * NDF/NDF.pm: Add

	* t/ndf.t: Add test

	* Header.pm: Use map. Add dump(). Use hash for configure()

2001-03-15  Tim Jenness  <timj@jach.hawaii.edu>

	* Item/t/parse.t: Add caching test 

	* Item/Item.pm: Fix caching

	* Item/t/parse.t: Rewrite to use a for loop and add some harder tests

	* Item/Item.pm: Fix some warnings with undef and add an UNDEF type

2001-03-15  Alasdair Allan <aa@astro.ex.ac.uk>

        * t/parse.t: Rewrote test harness

        * Item/Item.pm: Added some work arounds for common non-standard entries

2001-03-12  Tim Jenness  <timj@jach.hawaii.edu>

	* t/parse.t: Update test to fix array comparison.

2001-03-10  Alasdair Allan <aa@astro.ex.ac.uk>

        * Original version